# Faceit

./: .gitmodules  CMakeLists.txt  README.md
Bootloader/: CMakeLists.txt
Bootloader/cmake/: flags.cmake
Bootloader/debugger/: OVMF_VARS-need-smm.fd
Bootloader/src/: main.c
Bootloader/src/Bootloader/: Bootloader.c  Bootloader.h
Bootloader/src/Bootloader/Bootmgfw/: Bootmgfw.c  Bootmgfw.h  ImgArchStartBootApplicationHook.c  ImgArchStartBootApplicationHook.h
Bootloader/src/Bootloader/Graphics/: BLGraphics.c  BLGraphics.h  Logo.c  Logo.h
Bootloader/src/Bootloader/Mapper/: Mapper.c  Mapper.h
Bootloader/src/Bootloader/Winload/: Winload.c  Winload.h
Bootloader/src/FileSystem/: FileSystem.c  FileSystem.h
Bootloader/src/Graphics/: Graphics.c  Graphics.h
Bootloader/src/Graphics/Image/: Image.c  Image.h
Bootloader/src/Logger/: Logger.c  Logger.h
Bootloader/src/Math/: Math.c  Math.h
Bootloader/src/Memory/: Allocator.c  Allocator.h  Memory.c  Memory.h
Bootloader/src/String/: String.c  String.h
Bootloader/src/Types/: PE.h  Types.h
Bootloader/src/Utils/: Hook.c  Hook.h  PEUtils.c  PEUtils.h  Signature.c  Signature.h  Time.h  Utils.h
Cheat/: CMakeLists.txt
Cheat/cmake/: global-flags.cmake
Cheat/src/: main.cpp
Cheat/src/Communication/: Communication.h
Cheat/src/Utils/: CommunicationUtils.h  ProcessUtils.h
Driver/: CMakeLists.txt
Driver/cmake/: global-flags.cmake
Driver/src/: entry.cpp
Driver/src/Routine/: Routine.h
Driver/src/Routine/Allocator/: Allocator.cpp  Allocator.h
Driver/src/Routine/Communication/: Communication.h  CommunicationPipe.h
Driver/src/Routine/Communication/Pipes/: FunctionPointerSwapPipe.cpp  FunctionPointerSwapPipe.h  IoctlPipe.cpp  IoctlPipe.h
Driver/src/Routine/Memory/: Memory.h
Driver/src/Routine/String/: String.h
Driver/src/Routine/Thread/: Thread.h
Driver/src/Routine/Types/: Global.h
Driver/src/Routine/Utils/: Modules.cpp  Modules.h  Process.h  Utils.h
